create grass log files while mosaicking

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ data/
 scripts/snap_esa/Sentinel1
 scripts/snap_esa/Sentinel1_Preprocessed
 scripts/snap_esa/ASTER_Alaska_DEM.tif
+scripts/snap_esa/${targetFile}.*
 *.ipynb_checkpoints*
 *__pycache__*
