--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ scripts/snap_esa/Sentinel1
 scripts/snap_esa/Sentinel1_Preprocessed
 scripts/snap_esa/ASTER_Alaska_DEM.tif
 scripts/snap_esa/${targetFile}.*
+scripts/etc/s1_arctic_files.txt
 *.ipynb_checkpoints*
 *__pycache__*
 *logs*
