--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ scripts/snap_esa/Sentinel1_Preprocessed
 scripts/snap_esa/ASTER_Alaska_DEM.tif
 scripts/snap_esa/${targetFile}.*
 scripts/etc/s1_arctic_files.txt
+scripts/plot_harmonization/cshapes
+scripts/plot_harmonization/aggregate_plots.py
+plot_harmonization/etc
+*/input_data
+*/output_data
+*/temp_data
+*.shp
 *.csv
 *.tif
 *.ipynb_checkpoints*
